syntax = "proto3";

package pb;
option go_package = "pubsub-bulk/pb";

import "google/protobuf/timestamp.proto";

message Message {
  string id = 1;
  string message = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
  google.protobuf.Timestamp deleted_at = 5;
}
